# docs/api/openapi.json
@@ -56,7 +56,7 @@
             "type" : "string"
           },
           "storefront" : {
-            "$ref" : "#/components/schemas/Storefront"
+            "$ref" : "#/components/schemas/DetailsStorefront"
           },
           "subtitle" : {
             "type" : "string"
@@ -89,7 +89,21 @@
             "type" : "array"
           },
           "storefront" : {
-            "$ref" : "#/components/schemas/Storefront"
+            "$ref" : "#/components/schemas/SearchStorefront"
+          }
+        },
+        "type" : "object"
+      },
+      "DetailsStorefront" : {
+        "properties" : {
+          "cc" : {
+            "type" : "string"
+          },
+          "language" : {
+            "type" : "string"
+          },
+          "platform" : {
+            "type" : "string"
           }
         },
         "type" : "object"
@@ -188,7 +202,7 @@
         },
         "type" : "object"
       },
-      "Storefront" : {
+      "SearchStorefront" : {
         "properties" : {
           "cc" : {
             "type" : "string"
